crates/criticalup-cli/tests/snapshots/cli__auth__help_message.snap
---
source: crates/criticalup-cli/tests/cli/auth.rs
expression: repr
---
exit: exit status: 0

empty stdout

stderr
------
Show and change authentication with the download server

Usage:
  criticalup-test auth [OPTIONS] [COMMAND]

Commands:
  set     Set the authentication token used to interact with the download server
  remove  Remove the authentication token used to interact with the download server
  help    Print this message or the help of the given subcommand(s)

Options:
  -v, --verbose...                  Enable debug logs, -vv for trace
      --log-level [<LOG_LEVEL>...]  Tracing directives
  -h, --help                        Print help
------
