crates/criticalup-cli/tests/snapshots/cli__auth__token_without_expiry.snap
---
source: crates/criticalup-cli/tests/cli/auth.rs
expression: repr
---
exit: exit status: 0

empty stdout

stderr
------
valid authentication token present

token name:         dummy token 1
organization name:  internal
expires at:         none
------
